--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no, viewport-fit=cover" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<title>Blackjack Game 1.0 Sounds Fixed</title>
+<title>Blackjack Game 1.0 No Header</title>
 <style>
   * {
     margin: 0;
@@ -39,15 +39,6 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
-  }
-
-  h1 {
-    text-align: center;
-    color: #ffd700;
-    text-shadow: 0 0 20px rgba(255, 215, 0, 0.5);
-    margin-bottom: 10px;
-    font-size: clamp(1.2em, 5vw, 2em);
-    flex-shrink: 0;
   }
 
   .message {
@@ -246,11 +237,6 @@
       padding: 10px;
     }
 
-    h1 {
-      font-size: 1.2em;
-      margin-bottom: 5px;
-    }
-
     .info-panel {
       margin: 10px 0;
       font-size: 1em;
@@ -301,8 +287,6 @@
 </head>
 <body>
   <div class="game-container">
-    <h1>🃏 BLACKJACK 🃏</h1>
-
     <div class="message" id="message">Place your bet and press DEAL!</div>
 
     <div class="cards-area">
